in progress #65 - convert all pages live except virtual world closed #66 - built navbar closed #50 - Make Events page the default landing page

--- a/lib/venieri_web/controllers/page_html/bio.html.heex
+++ b/lib/venieri_web/controllers/page_html/bio.html.heex
@@ -2,7 +2,7 @@
 
 
 <div class="mb-5 mt-10">
-<h1 class="text-2xl/7 font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">LYDIA VENIERI BIO</h1>
+<h1 class="text-2xl/7 font-bold text-gray-700 sm:truncate sm:text-3xl sm:tracking-tight">BIO</h1>
 </div>
 
 
