--- a/lib/venieri_web/live/bio_live/index.html.heex
+++ b/lib/venieri_web/live/bio_live/index.html.heex
@@ -1,7 +1,8 @@
-
-    <h1 class="text-2xl/7 font-bold text-gray-700 sm:truncate sm:text-3xl sm:tracking-tight pt-3">
-    BIO
+    <h1 class="text-2xl/7 font-bold text-gray-700 sm:truncate sm:text-3xl sm:tracking-tight pt-3 hidden print:block">
+    LYDIA VENIERI - BIO
     </h1>
+
+
     <div class="flex  flex-wrap pt-5 pb-5gap-4 md:gap-8">
     <.media_as_picture
         slug="lydia-venieri"
@@ -27,7 +28,7 @@
         <li>
         <b class="font-sans">{year} -</b>
         <%= for show <- shows do %>
-            <a class="text-sm" href={"/events/#{show.id}"}><%= show.title %></a>,
+            <a class="text-sm" href={"/posts/#{show.slug}"}><%= show.title %></a>,
             <span class="font-light text-xs">{show.venue}</span>
             <br />
         <% end %>
@@ -42,7 +43,7 @@
         <li>
         <b class="font-sans">{year} -</b>
         <%= for show <- shows do %>
-            <a class="text-sm" href={"/events/#{show.id}"}><%= show.title %></a>,
+            <a class="text-sm" href={"/posts/#{show.slug}"}><%= show.title %></a>,
             <span class="font-light text-xs">{show.venue}</span>
             <br />
         <% end %>
